--- a/0x01-react_intro/task_5/dashboard/package.json
+++ b/0x01-react_intro/task_5/dashboard/package.json
@@ -4,17 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode production",
-    "start": "webpack-dev-server --mode development --open --hot"
+  "start": "webpack serve --config config/webpack.config.js --mode development --open --hot",
+  "build": "webpack --config config/webpack.config.js --mode production"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
   "devDependencies": {
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-react": "^7.24.7",
+    "babel-loader": "^9.1.3",
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.0",
-    "image-webpack-loader": "^8.1.0",
     "style-loader": "^4.0.0",
     "webpack": "^5.92.1",
     "webpack-cli": "^5.1.4",
