--- a/0x01-react_intro/task_5/dashboard/package.json
+++ b/0x01-react_intro/task_5/dashboard/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-  "start": "webpack serve --config config/webpack.config.js --mode development --open --hot",
-  "build": "webpack --config config/webpack.config.js --mode production"
+    "start": "webpack serve --config config/webpack.config.js --mode development --open --hot",
+    "build": "webpack --config config/webpack.config.js --mode production"
   },
   "keywords": [],
   "author": "",
@@ -20,7 +20,9 @@
     "@babel/preset-react": "^7.24.7",
     "babel-loader": "^9.1.3",
     "css-loader": "^7.1.2",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.0",
+    "image-webpack-loader": "^8.1.0",
     "style-loader": "^4.0.0",
     "webpack": "^5.92.1",
     "webpack-cli": "^5.1.4",
